- 
    
Bug
 - 
    Resolution: Done
 - 
    
P3: Somewhat important
 - 
    4.5.1
 - 
    None
 
- 
        I3cd3e071b34271bf5802ab09f6c125beda5e9844
 
Qt plugin instances are never deleted. For example when loading a SVG document, the svg plugin is loaded and the QSvgPlugin object is constructed, however it is never deleted.
int main(int argc, char *argv[]) { _CrtSetDbgFlag( _CRTDBG_ALLOC_MEM_DF | _CRTDBG_LEAK_CHECK_DF ); QApplication a(argc, argv); QIcon icon = QIcon("C:/qt/4.5.1/demos/browser/data/browser.svg"); return 0; //a.exec(); }
- relates to
 - 
                    
QTBUG-17458 Plugin destructors not being called
-         
 - Open
 
 -         
 
- replaces
 - 
                    
QTBUG-6909 Global variables not cleared
-         
     - Closed
 
 -